[gd_scene load_steps=5 format=3 uid="uid://dorlg3naen1hc"]

[ext_resource type="Script" path="res://scenes/ui/menus/main_menu/main_menu.gd" id="2_2femc"]
[ext_resource type="PackedScene" uid="uid://cn8y31fkdj1eq" path="res://scenes/ui/menus/titled_menu.tscn" id="2_mf70d"]
[ext_resource type="PackedScene" uid="uid://p22l2va8hqim" path="res://scenes/ui/menus/menu_button_control.tscn" id="5_ajip7"]
[ext_resource type="PackedScene" uid="uid://bfr8kfd1y2um6" path="res://scenes/ui/menus/options_menu/options_menu.tscn" id="6_cv2xg"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_2femc")
game_start_scene_path = "res://scenes/game/levels/level_1/level_1.tscn"

[node name="MainTitledMenu" parent="." instance=ExtResource("2_mf70d")]
unique_name_in_owner = true
layout_mode = 1

[node name="Title" parent="MainTitledMenu/MenuMargin/MenuContainer/TitleContainer" index="0"]
text = "Crypt of blooD"

[node name="PlayButton" parent="MainTitledMenu/MenuMargin/OptionContainer" index="1" instance=ExtResource("5_ajip7")]
layout_mode = 2
text = "Play"

[node name="OptionsButton" parent="MainTitledMenu/MenuMargin/OptionContainer" index="2" instance=ExtResource("5_ajip7")]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="QuitButton" parent="MainTitledMenu/MenuMargin/OptionContainer" index="3" instance=ExtResource("5_ajip7")]
layout_mode = 2
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("6_cv2xg")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="MainTitledMenu/MenuMargin/OptionContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainTitledMenu/MenuMargin/OptionContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainTitledMenu/MenuMargin/OptionContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="go_back" from="OptionsMenu" to="." method="_on_options_menu_go_back"]

[editable path="MainTitledMenu"]
